@index, fixed: problem where the grid in the map section was being overflown

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3211,7 +3211,7 @@ justify-content: center;
 @media (min-width: 1200px) {
     .mapa {
         /* ajusta la posición en el grid */
-        grid-row: 1 / 9;
+        grid-row: 1 / 10;
         grid-column: 1 / 3;
     }
 }
@@ -3296,7 +3296,7 @@ justify-content: center;
 @media (min-width: 1200px) {
     .becarios {
         /* ajusta la posición en el grid */
-        grid-row: 9 / 12;
+        grid-row: 10 / 12;
         grid-column: 1 / 3;
     }
 }
